<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/added_to_training_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_workout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_api_exercise"
        app:layout_constraintVertical_bias="0.050000012" />


    <Button
        android:id="@+id/btn_add_user_exercise"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:background="@color/color_light"
        android:onClick="onClickAddExercise"
        android:orientation="horizontal"
        android:text="@string/add_your_exercise_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_workout_title" />

    <Button
        android:id="@+id/btn_add_api_exercise"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:background="@color/color_light"
        android:onClick="onClickAddAPIExercise"
        android:orientation="horizontal"
        android:text="@string/add_api_exercise_button"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_workout_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn_add_user_exercise"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_workout_title" />

    <Button
        android:id="@+id/btn_add_workout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_training_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <EditText
        android:id="@+id/edit_text_workout_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_training_title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>