<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <EditText
        android:id="@+id/edtTxtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="101dp"
        android:layout_marginTop="121dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtTxtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtTxtSurname"
        android:layout_alignStart="@+id/edtTxtSurname"
        android:layout_alignEnd="@+id/edtTxtSurname"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/edtTxtSurname"
        app:layout_constraintStart_toStartOf="@+id/edtTxtSurname"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtSurname" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtTxtEmail"
        android:layout_alignStart="@+id/edtTxtEmail"
        android:layout_alignEnd="@+id/edtTxtEmail"
        android:layout_marginStart="40dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="40dp"
        android:onClick="onClickRegisterBtn"
        android:padding="20dp"
        android:scrollbarStyle="outsideOverlay"
        android:text="Zarejestruj się"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edtTxtEmail"
        app:layout_constraintStart_toStartOf="@+id/edtTxtEmail"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtConfirmPassword"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edtTxtSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtTxtName"
        android:layout_alignStart="@+id/edtTxtName"
        android:layout_alignEnd="@+id/edtTxtName"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/edtTxtName"
        app:layout_constraintStart_toStartOf="@+id/edtTxtName"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtName" />

    <EditText
        android:id="@+id/edtTxtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/edtTxtEmail"
        app:layout_constraintStart_toStartOf="@+id/edtTxtEmail"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtEmail" />

    <EditText
        android:id="@+id/edtTxtConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/edtTxtPassword"
        app:layout_constraintStart_toStartOf="@+id/edtTxtPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>